[package]
name = "read_chunks"
version = "0.2.0"
edition = "2021"
keywords = ["io", "chunking"]
categories = ["filesystem", "rust-patterns"]
homepage = "https://github.com/ultrabear/read_chunks"
repository = "https://github.com/ultrabear/read_chunks"
authors = ["Alexander Hall <bearodark@gmail.com>"]
description = "An extension to the Read trait allowing easier chunked reading"
readme = "README.md"
license = "MIT OR Apache-2.0"
